# ParvazAcademy

./: README.md  docker-compose.yaml
backend/app/: .env  manage.py  pyproject.toml
backend/app/accounts/students/: apps.py
backend/app/accounts/students/mixins/: front.py
backend/app/accounts/students/serializers/: admin_serializer.py  front_serialiser.py
backend/app/accounts/students/urls/: admin.py  front.py
backend/app/accounts/students/views/: admin_view.py  front_view.py
backend/app/accounts/teachers/: models.py
backend/app/accounts/teachers/migrations/: 0001_initial.py
backend/app/accounts/teachers/serialisers/: front_serialiser.py
backend/app/accounts/teachers/urls/: front.py
backend/app/accounts/users/: managers.py  models.py  signals.py
backend/app/accounts/users/migrations/: 0001_initial.py
backend/app/accounts/users/mixins/: front_mixin.py
backend/app/accounts/users/serializers/: admin_serializer.py
backend/app/accounts/users/tests/: test_admin.py
backend/app/accounts/users/urls/: admin.py  front.py
backend/app/accounts/users/views/: admin_view.py
backend/app/apps/courses/: managers.py
backend/app/apps/courses/migrations/: 0001_initial.py
backend/app/apps/courses/mixins/: front.py
backend/app/apps/courses/serializers/: front_serializer.py
backend/app/core/: asgi.py  redis_config.py  settings.py  wsgi.py
backend/app/utils/: media.py
src/backend/app/: .env  fixture.json  pyproject.toml  test1.py
src/backend/app/apps/courses/: apps.py  (+4 more)
src/backend/app/core/: __init__.py  celery.py  settings.py  urls.py
src/backend/app/utils/: exception.py  media.py  otp.py  redis.py
(+56 files in other folders)
