[tool.poetry]
name = "backend"
version = "0.1.0"
description = "parvaz_academy backend DjangoRestFramework"
authors = ["AlirezMortezaei <Mortezaei2324@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-dotenv = "^1.4.2"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
drf-spectacular = "^0.27.1"
pillow = "^10.2.0"
redis = "^5.0.1"
kavenegar = "^1.1.2"
django-jalali-date = "^1.1.0"
boto3 = "^1.34.32"
django-storages = "^1.14.2"
celery = "^5.3.6"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
